[build-system]
requires = ["hatchling>=1.5"]
build-backend = "hatchling.build"

[project]
name = "spyder-remote-services"
readme = "README.md"
dynamic = ["version"]
description = "A Jupyter Server Extension Providing Support for Spyder Remote Services"
keywords = ["jupyter", "spyder"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = [
  "jupyter_server >=2.14.2,<3.0",
  "jupyter_client >=8.6.2,<9.0",
  "envs-manager <1.0.0",
  "orjson >=3.10.12,<4.0",
]

[[project.authors]]
name = "Hendrik Louzada"
email = "hendriklouzada@gmail.com"


[project.optional-dependencies]
test = [
  "pytest >= 7.3.1",
  "ruff >= 0.4.1",
]

[project.scripts]
"spyder-server" = "spyder_remote_services.app:main"

[tool.hatch.version]
path = "spyder_remote_services/__init__.py"

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config" = "etc/jupyter/jupyter_server_config.d"
